<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Evento">

    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="420dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/addEvent"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cyan"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cyan"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="text"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/ubicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cyan"
            android:ems="10"
            android:hint="@string/ubicacion"
            android:inputType="text"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cyan"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/fecha"
            android:inputType="none"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cyan"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hora"
            android:inputType="none"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <Button
            android:id="@+id/btnNewEvento"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:backgroundTint="#1BC665"
            android:text="@string/addEvent"
            android:textStyle="bold"
            tools:text="Añadir" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>