<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnAddEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#9E114B"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="267dp"
        android:layout_height="191dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/mail"
            android:backgroundTint="@color/cyan"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/pass"
            android:backgroundTint="@color/cyan"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#9E114B"
            android:text="@string/btnlogin"
            android:textColorHint="@color/gray" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1BC665"
            android:text="@string/registrar"
            android:textColorHint="@color/gray" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:layout_marginBottom="152dp"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="add"
        android:text="@string/btnloginGoogle"
        android:textColor="@color/black"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconTint="#F5000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#9CB69696"
        tools:text="@string/btnloginGoogle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:text="@string/red_social"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Login" />

</androidx.constraintlayout.widget.ConstraintLayout>